[package]
name = "meska"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["executor"] }
tokio = { version = "1", features = ["sync"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
mpsc = ["dep:tokio"]
request = ["dep:tokio"]
default = ["mpsc", "request"]
