[package]
name = "meslin-derive"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["actor", "messaging", "channel", "sender"]
categories = ["asynchronous", "concurrency"]
description = "Ergonomic messaging for Rust"
homepage = "https://github.com/jvdwrf/Meslin"
repository = "https://github.com/jvdwrf/Meslin"
readme = "../README.md"

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
