[package]
name = "meska"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["executor"] }
tokio = { version = "1", features = ["sync"], optional = true }
async-priority-channel = { version = "0.2", optional = true }
meska-derive = { version = "0.1", path = "../meska-derive", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
derive = ["dep:meska-derive"]
mpsc = ["dep:tokio"]
request = ["dep:tokio"]
broadcast = ["dep:tokio"]
watch = ["dep:tokio"]
priority = ["dep:async-priority-channel"]
default = ["mpsc", "request", "derive", "broadcast", "watch", "priority"]
