[package]
name = "meslin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["executor"] }
tokio = { version = "1", features = ["sync"], optional = true, default-features = false }
async-priority-channel = { version = "0.2", optional = true }
flume = { version = "0.11", optional = true }
oneshot = { version = "0.1", optional = true }
meslin-derive = { version = "0.1", path = "../meslin-derive", optional = true }
derive_more = { version = "1.0.0-beta.6", optional = true, default-features = false }
thiserror = { version = "1" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
derive = ["dep:meslin-derive", "derive_more/from", "derive_more/try_into"]
mpmc = ["dep:flume"]
request = ["dep:oneshot"]
broadcast = ["dep:tokio"]
watch = ["dep:tokio"]
priority = ["dep:async-priority-channel"]
default = ["mpmc", "request", "derive", "broadcast", "watch", "priority"]
